# SB-Montador

./: .gitignore  CMakeLists.txt  README.md
docs/: bin.asm  bin.pre  bin_out.asm  exemplo.asm  exemplo.pre  fat_mod_A.asm  fat_mod_A.pre  fat_mod_B.asm  fat_mod_B.pre  math.asm  triangulo.asm  triangulo.pre
include/: ASM_file.hpp  assembler.hpp  console.hpp  defs.hpp  io_file.hpp  linker.hpp  preprocessor.hpp  tables.hpp
src/: ASM_file.cpp  assembler.cpp  io_file.cpp  ligador.cpp  linker.cpp  main.cpp  montador.cpp  preprocessor.cpp
